--- a/src/app/components/AuthPopup/AuthPopup.css
+++ b/src/app/components/AuthPopup/AuthPopup.css
@@ -32,15 +32,14 @@
 }
 
 .authform .left img{
-    width: 80%;
-    object-fit: contain;
+    width: 50%;
+    object-fit:contain;
 }
 
 .authform .right{
     /* background-color: var(--col1); */
     width: 50%;
     height: 100%;
-    border-left: 1px solid var(--col1);
     padding: 20px;
     overflow: scroll;
 }
@@ -65,3 +64,28 @@
     gap: 10px;
 }
 
+
+.authform .form_else{
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+}
+.authform .form_else1{
+    font-size: medium;
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+  margin-right: 10px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+}
+.popup .close{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border-radius: 50%;
+    line-height: 0;
+}
