--- a/src/app/components/Navbar/Navbar.css
+++ b/src/app/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 nav{
-    background-color: lightslategray;
+    background-color: #1a1a1a;
     height: 60px;
     display: flex;
     justify-content: center;
