--- a/src/app/components/ReportFormPopup/Popup.css
+++ b/src/app/components/ReportFormPopup/Popup.css
@@ -1,7 +1,7 @@
 .popupout {
     position: fixed;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,9 +9,12 @@
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
-
-}
-.popupbox {
+    backdrop-filter: blur(5px);
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  
+  .popupbox {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -20,40 +23,40 @@
     max-height: 80%;
     padding: 20px;
     border-radius: 10px;
-overflow: scroll;
-}
-
-
-.popupbox .hrline {
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    overflow: scroll;
+  }
+  
+  .popupbox.hrline {
     width: 100%;
     height: 1px;
     background-color: var(--col1);
     margin: 20px 0px;
-}
-
-
-.popupbox .items {
+  }
+  
+  .popupbox.items {
     display: flex;
     flex-direction: column;
     gap: 10px;
-}
-
-
-.popupbox .items .item {
+  }
+  
+  .popupbox.items.item {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.popupbox .items .item h3 {
+    
+  }
+  
+  .popupbox.items.item h3 {
     font-size: 13px;
     font-weight: 500;
     width: 100%;
     text-align: left;
-   color: black;
-}
-
-.popupbox .items .item button {
+    color: black;
+  }
+  
+  .popupbox.items.item button {
     background-color: var(--col1);
     border: none;
     border-radius: 5px;
@@ -61,11 +64,9 @@ overflow: scroll;
     font-size: 13px;
     cursor: pointer;
     transition: 0.3s;
-}
-
-
-.popupbox .close {
+  }
   
+  .popupbox.close {
     color: var(--col1);
     width: 40px;
     height: 40px;
@@ -79,5 +80,6 @@ overflow: scroll;
     right: 10px;
     transition: 0.3s;
     z-index: 1001;
-
-}
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
